AST: switch docs to using regular sstroutine label

--- a/libraries/ast/sun_master.tex
+++ b/libraries/ast/sun_master.tex
@@ -19,9 +19,9 @@ f+
 f-
 \stardocauthors     {R.F. Warren-Smith \& D.S. Berry}
 \stardocdate        {25th February 2013}
-\stardoctitle     {AST\\
-                                A Library for Handling\\
-                                World Coordinate Systems\\
+\stardoctitle     {AST\linebreak%
+                                A Library for Handling\linebreak%
+                                World Coordinate Systems\linebreak%
                                 in Astronomy}
 \stardoccopyright   {Copyright (C) 2014 Science \& Technology Facilities Council}
 \stardocversion     {V<VERSION_NUMBER>}
@@ -60,8 +60,6 @@ environment-independent.
 \providecommand{\secref}[1]{\S\ref{#1}}
 
 \providecommand{\fitskey}[3]{{#1}&{#2}&{#3}\\}
-
-\providecommand{\sstlabel}[1]{}
 
 % Use {\tt ... } as \texttt{...} does not work if there are new lines in #1
 \providecommand{\sstsynopsis}[1]{\sstdiytopic{Synopsis}{\tt #1}}
